k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
      name: flask-app
    spec:
      containers:
        - name: flask-app
          image: muhammadabdullahabrar/devops:flasktwotier
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
