k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: tier
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30002
  type: NodePort
